// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Nightwatch · BDD (describe/it) [nightwatch-bdd] > captures a consistent trace shape 1`] = `
{
  "commandVocabulary": [
    "titleContains",
    "url",
  ],
  "groups": {
    "maxDepth": 2,
    "topLevel": 1,
  },
  "hasConsole": true,
  "hasFrames": true,
  "hasMutations": true,
  "hasNetwork": true,
  "hasSources": true,
  "hasTranscript": true,
}
`;

exports[`Selenium · cucumber [selenium-cucumber] > captures a consistent trace shape 1`] = `
{
  "commandVocabulary": [
    "assert.match",
    "click",
    "getText",
    "getUrl",
    "setValue",
    "url",
  ],
  "groups": {
    "maxDepth": 3,
    "topLevel": 1,
  },
  "hasConsole": true,
  "hasFrames": true,
  "hasMutations": true,
  "hasNetwork": true,
  "hasSources": true,
  "hasTranscript": true,
}
`;

exports[`Selenium · mocha [selenium-mocha] > captures a consistent trace shape 1`] = `
{
  "commandVocabulary": [
    "assert.equal",
    "assert.match",
    "getText",
    "getTitle",
    "url",
  ],
  "groups": {
    "maxDepth": 2,
    "topLevel": 1,
  },
  "hasConsole": true,
  "hasFrames": true,
  "hasMutations": true,
  "hasNetwork": true,
  "hasSources": true,
  "hasTranscript": true,
}
`;

exports[`WebdriverIO · cucumber [wdio-cucumber] > captures a consistent trace shape 1`] = `
{
  "commandVocabulary": [
    "click",
    "setValue",
    "toExist",
    "toHaveText",
    "url",
  ],
  "groups": {
    "maxDepth": 2,
    "topLevel": 2,
  },
  "hasConsole": true,
  "hasFrames": true,
  "hasMutations": true,
  "hasNetwork": true,
  "hasSources": true,
  "hasTranscript": true,
}
`;

exports[`WebdriverIO · mocha [wdio-mocha] > captures a consistent trace shape 1`] = `
{
  "commandVocabulary": [
    "click",
    "setValue",
    "toExist",
    "toHaveText",
    "url",
  ],
  "groups": {
    "maxDepth": 1,
    "topLevel": 2,
  },
  "hasConsole": true,
  "hasFrames": true,
  "hasMutations": true,
  "hasNetwork": true,
  "hasSources": true,
  "hasTranscript": true,
}
`;
